# obus

./: .gitignore  .travis.yml  README.md  obus.opam
bindings/hal/: jbuild
bindings/network-manager/: jbuild
bindings/notification/: jbuild
bindings/policykit/: jbuild
bindings/udisks/: jbuild
bindings/upower/: jbuild
docs/: manual.rst
docs/examples/: dune  jbuild  ping.ml
docs/man/: dune  jbuild  obus-dump.1  obus-introspect.1
src/: oBus_address.ml  oBus_auth.ml  oBus_bus.ml  oBus_connection.ml  oBus_error.mli  oBus_info.ml  oBus_match.ml  oBus_object.ml  oBus_peer.ml  oBus_property.ml  oBus_proxy.ml  oBus_resolver.ml  oBus_server.ml  oBus_signal.ml  oBus_transport.ml  oBus_util.ml  oBus_wire.ml
src/data/: jbuild  oBus_value.ml
src/idl/: dune  jbuild
src/internals/: jbuild
src/ppx/: dune  jbuild  ppx_obus.ml
src/protocol/: jbuild  oBus_config.ml  oBus_info.ml  oBus_match.ml  oBus_object.ml  oBus_property.ml  oBus_proxy.ml  oBus_resolver.ml  oBus_server.ml  oBus_transport.ml  oBus_wire.ml
tests/: dune  jbuild  main.ml  test_auth.ml  test_communication.ml
tools/: jbuild  obus_dump.ml  obus_gen_client.ml  obus_gen_interface.ml  obus_gen_server.ml  obus_introspect.ml
utils/scripts/: cpufreq-performance  cpufreq-powersave  multimedia-keys  power-hibernate  power-reboot  power-shutdown  power-suspend
