opam-version: "1.2"

maintainer: "jeremie@dimino.org"
authors: [ "Jérémie Dimino" ]
homepage: "https://github.com/diml/obus"
bug-reports: "https://github.com/diml/obus/issues"
dev-repo: "https://github.com/diml/obus.git"
license: "BSD3"

build: [[ "dune" "build" "-p" name "-j" jobs ]]
build-test: [[ "dune" "build" "tests/main.exe" ]]
install: [[ "dune" "install" "-p" name ]]
remove:  [[ "dune" "uninstall" "-p" name ]]

depends: [
  "dune" {build}
  "xmlm"
  "camlp4"
  "lwt" {>= "2.7.0"}
  "lwt_ppx"
  "lwt_log"
  "lwt_react"
  "ocaml-migrate-parsetree"
  "ppx_metaquot"
]

# Required by ppx_metaquot
available: [ ocaml-version >= "4.04.1" ]
